--- a/about.html
+++ b/about.html
@@ -1,8 +1,8 @@
 ---
 layout: page
 title: "About"
-description: "Hey, this is BY."
-header-img: "img/post-bg-rwd.jpg"
+description: "Hi, this is Changshihyoung."
+header-img: "img/home-bg.jpg"
 ---
 
 <!-- Language Selector -->
@@ -15,15 +15,14 @@ header-img: "img/post-bg-rwd.jpg"
 <div class="zh post-container">
 
     <!--copied from markdown -->
-    <blockquote><p>冰冻三尺 非一日之寒<br>
-    积土成山 非斯须之作</p></blockquote>
+    <blockquote><p>你好~<br>
 
-    <p>Hey，我是<strong>柏荧(BY)</strong>，一只iOS程序猿，现在厦门工作。</p>
+    <p>我是<strong>Changshihyoung</strong>，就读于中国科学院信息工程研究所。</p>
 
-    <p>工作、学习之余，我还是一个健身爱好者，同时也非常喜欢拳击。</p>
-
+    <p>我的研究方向是隐写分析，欢迎切磋交流</p>
+<!-- <div class="">
     <p>这是我的利用 <a href="https://pages.github.com/">GitHub Pages</a> 与 <a href="http://jekyll.com.cn/">Jekyll</a> 搭建的 个人博客。我在GitHub主页<a href="https://github.com/qiubaiying">👉GitHub·BY</a> 与 简书主页<a href="https://http://www.jianshu.com/u/e71990ada2fd">👉BY</a>。如果有什么问题，欢迎提出探讨~</p>
-
+</div> -->
     <p></p>
     
     <h5>Talks</h5>
