博客版本升级

--- a/about.html
+++ b/about.html
@@ -15,23 +15,24 @@ header-img: "img/home-bg.jpg"
 <div class="zh post-container">
 
     <!--copied from markdown -->
-    <blockquote><p>你好~<br>
+    <h5>你好~</h5>
 
-    <p>我是<strong>Changshihyoung</strong>，就读于中国科学院信息工程研究所。</p>
+    <p>我是<strong>ChangShihyoung</strong>，目前就读于 中科院信息工程研究所——信息安全国家重点实验室。</p>
 
-    <p>我的研究方向是隐写分析，欢迎切磋交流</p>
+    <p>我的专业方向为信息隐藏、数字水印。目前的研究课题与工程项目主要集中于 机器学习、深度学习方法的隐写分析 方面，欢迎各位同仁切磋交流。</p>
+	<p>如果对博客里的内容有任何疑议与纠正，请直接在评论里指出，或者通过页面中列出的联系方式给我发消息。</p>
+	<p><strong>感谢你的驻足~</strong></p>
 <!-- <div class="">
     <p>这是我的利用 <a href="https://pages.github.com/">GitHub Pages</a> 与 <a href="http://jekyll.com.cn/">Jekyll</a> 搭建的 个人博客。我在GitHub主页<a href="https://github.com/qiubaiying">👉GitHub·BY</a> 与 简书主页<a href="https://http://www.jianshu.com/u/e71990ada2fd">👉BY</a>。如果有什么问题，欢迎提出探讨~</p>
 </div> -->
     <p></p>
     
-    <h5>Talks</h5>
+    <h5>联系方式</h5>
 
     <ul>
-        <li><a href="https://github.com">GitHub</a></li>
-        <li><a href="http://jekyll.com.cn/">jekyll</a></li>
-        <li><a href="http://huangxuan.me/">Hux</a></li> 
-        <li><a href="https://analytics.google.com/analytics">Google Analytics</a></li>
+        <li><a href="https://github.com/changshihyoung">GitHub</a></li>
+		<li><a href="https://weibo.com/u/1944440585">Weibo</a></li>
+		<li>changshihyoung@gmail.com</li>		
     </ul>
 </div>
 
